# almpure

./: .gitignore  Makefile  Makefile.am  README  README.md  configure.ac  convenience-link.mk  delta_map.c  mpi_stubs_c.c  mpi_stubs_f90.f90  mpif.h  s2hat.makefile  s2hat.makefile.in  setup.sh
cython/: .gitignore  Makefile.am  almpure.pxd  almpure.pyx  almpure_c.c  setup.py.in
julia/: .gitignore  Makefile  example.jl  s2hat.jl
matlab/: Makefile  Makefile.am  alm2cl.m  alm2map.m  alm2map_c.c  cl2bandpowers.m  debug.h  gen_alms.m  gen_delta_alms.m  map2alm.m  map2alm_c.c  map2almpure.m  map2almpure_c.c  mpihelper.c  powspec.m  s2hat_alm2map.m  s2hat_alm2map_c.c  s2hat_map2alm.m  s2hat_map2alm_c.c  s2hat_map2almpure.m  s2hat_map2almpure_c.c
mpistub/: Makefile.am  README  mpi.h  mpi_stubs_c.c
s2hat/: Makefile.am  Makefile.in  README  comp_pureS2HAT_example.scr  example_compilation_script_gnu.scr  example_compilation_script_pgi.scr  example_library_compilation_script_gnu.scr  example_library_compilation_script_ibmSP.scr  example_library_compilation_script_intel.scr  example_library_compilation_script_opteron.scr  s2hat.h  s2hat_alm2map.f90  s2hat_c_interface.f90  s2hat_c_wrappers.c  s2hat_defs.f90  s2hat_defs.h  s2hat_example.c  s2hat_example.f90  s2hat_f2c.h  s2hat_map2alm.F90  s2hat_pixelization.f90  s2hat_pure.h  s2hat_toolbox.F90  s2hat_types.h  s2hat_types_internal.F90
support/: odyssey_env.sh
